Fix for fix. Change overflow behavior on y axis

--- a/resources/sass/posts/_postCompilation.scss
+++ b/resources/sass/posts/_postCompilation.scss
@@ -61,6 +61,7 @@
   width: 100%;
   height: 100%;
   color: rgba(255, 255, 255, 0.9);
+  overflow-y: auto;
   z-index: 102;
 
   &--base {
@@ -106,11 +107,9 @@
 }
 
 .post-compilation__title {
-  @apply max-h-full;
   @apply uppercase;
   @apply font-semibold;
   @apply leading-tight;
-  @apply overflow-y-auto;
   z-index: 102;
 
   &--base {
